@@ -1,4 +1,4 @@
-Copyright 2018 Bryan Hawkins <spcnvdrr@protonmail.com>
+Copyright 2019 Bryan Hawkins <spcnvdrr@protonmail.com>
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
@@ -28,8 +28,8 @@ NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
-The strlcat and strlcpy functions used in this program are copyrighted 
-by Todd C. Miller. They are subject to the following conditions: 
+The strlcat and strlcpy functions used in this program are copyrighted
+by Todd C. Miller. They are subject to the following conditions:
 
 Copyright (c) 1998, 2015 Todd C. Miller <Todd.Miller@courtesan.com>
 
@@ -44,6 +44,3 @@ ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-
-
-
